added h1, input, button, linked jquery

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase Tracker</title>
+    <!-- linked jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="jquery-3.6.1.min.js"></script>
+    <!-- linked js file -->
+    <script src="client.js"></script>
 </head>
 <body>
-    
+<h1>Purchase Tracker</h1>
+<input placeholder="your name" id="nameInput">
+<button id="sayHelloButton">Say Hello</button>
 </body>
 </html>
