interface added to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 </head>
 <body>
 <h1>Purchase Tracker</h1>
-<input placeholder="your name" id="nameInput">
-<button id="sayHelloButton">Say Hello</button>
+<h2>Budget: $<span id="budgetOut">BUDGETNUMBER</span></h2>
+<input type="text" placeholder="purchase name" id="purchaseNameIn">
+<input type="number" placeholder="purchase price" id="purchasePriceIn">
+<button id="addPurchaseButton">Add</button>
+<h3>Purchases:</h3>
+<ul>
+<li>PURCHASENAME: PURCHASEPRICE</li>
+</ul>
+<h3>Remaining Budget: $<span id="remainingbudget">REMAINDINGBUDGET</span></h3>
 </body>
 </html>
