declared addPurchase func

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1>Purchase Tracker</h1>
-<h2>Budget: $<span id="budgetOut">BUDGETNUMBER</span></h2>
+<h2>Budget: $<span id="budgetOut"></span></h2>
 <input type="text" placeholder="purchase name" id="purchaseNameIn">
 <input type="number" placeholder="purchase price" id="purchasePriceIn">
 <button id="addPurchaseButton">Add</button>
