--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <input type="number" placeholder="purchase price" id="purchasePriceIn">
 <button id="addPurchaseButton">Add</button>
 <h3>Purchases:</h3>
-<ul>
-<li>PURCHASENAME: PURCHASEPRICE</li>
+<ul id="purchasesOut">
 </ul>
-<h3>Remaining Budget: $<span id="remainingbudget">REMAINDINGBUDGET</span></h3>
+<h3>Remaining Budget: $<span id="remainingBudgetOut"></span></h3>
 </body>
 </html>
